--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -164,33 +164,33 @@
     <string name="pointicons">Иконки точек</string>
     <string name="base_approx_time_remaining">Показывать приблизительное время захвата базы</string>
     <string name="base_progress_beeping">Сигнал при захвате ближайшей базы</string>
-    <string name="mapscale">Map scale</string>
-    <string name="breadcrumbs">Breadcrumbs</string>
-    <string name="support_development">Support the development</string>
+    <string name="mapscale">Масштабная линейка</string>
+    <string name="breadcrumbs">Отображение трека</string>
+    <string name="support_development">Поддержать разработчиков</string>
 
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
-    <string name="connected">Connected</string>
-    <string name="supporter">Supporter</string>
-    <string name="contributor">Contributor</string>
-    <string name="contribute_resources">Help out with app resources</string>
-    <string name="waiting_for_battle">Waiting for battle</string>
-    <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Exit the app?</string>
-    <string name="exit_question">Do you want to disconnect and close the app?</string>
-    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-    <string name="coop_start">Start new co-op</string>
-    <string name="coop_join">Join co-op</string>
-    <string name="coop_title">Co-op session</string>
-    <string name="close_enemy_detection">Close enemy detection</string>
-    <string name="far_enemy_detection">Far enemy detection</string>
-    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-    <string name="coop_session_started">Co-op session started.</string>
+    <string name="airplane_range">Дальность обнаружения самолетов</string>
+    <string name="ground_range">Наземная дальность обнаружения</string>
+    <string name="connected">Подключено</string>
+    <string name="supporter">Спонсор</string>
+    <string name="contributor">Помощник</string>
+    <string name="contribute_resources">Помогите с развитием приложения</string>
+    <string name="waiting_for_battle">Ожидание боя</string>
+    <string name="subscription">(Подписка)</string>
+    <string name="exit_title">Выйти из приложения?</string>
+    <string name="exit_question">Вы хотите отключиться и выйти из приложения?</string>
+    <string name="hide_add_requirement">Станьте Спонсором или Помощником, чтобы отключить рекламу.</string>
+    <string name="coop_start">Начать сессию</string>
+    <string name="coop_join">Присоединиться к сессии</string>
+    <string name="coop_title">Совместная сессия</string>
+    <string name="close_enemy_detection">Обнаружение близких врагов</string>
+    <string name="far_enemy_detection">Обнаружение далеких врагов</string>
+    <string name="coop_connecting_to_id">Присоединение к сессии ID:</string>
+    <string name="coop_session_started">Совместная сессия запущена.</string>
     <string name="id">ID:</string>
-    <string name="coop_chat_instruction_prefix">Type</string>
-    <string name="coop_chat_instruction_postfix">to game team chat.</string>
-    <string name="show_ads_while_not_playing">Show ads while not playing</string>
-    <string name="allow_data_collection">Allow anonymous data collection</string>
-    <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="coop_chat_instruction_prefix">Введите</string>
+    <string name="coop_chat_instruction_postfix">для чата с командой.</string>
+    <string name="show_ads_while_not_playing">Показывать рекламу вне боя</string>
+    <string name="allow_data_collection">Собирать анонимную статистику</string>
+    <string name="data_collection_explained">С соблюдением правил Google Analytics, это помогает улучшить приложение для Вас.</string>
 
 </resources>
