--- a/translations/values-it/strings.xml
+++ b/translations/values-it/strings.xml
@@ -7,13 +7,13 @@
     <string name="hide">Nascondi</string>
     <string name="danger">Notifiche pericolo</string>
     <string name="nodanger">Notifiche sicurezza</string>
-    <string name="proximity_wrn">Raggio:</string>
+    <string name="proximity_wrn">Prossimità:</string>
     
     
     <string name="more">Altre imp.</string>
     <string name="connerror">Nessuna connessione</string>
     
-    <string name="gui">Impostazioni interfaccia</string>
+    <string name="gui">Interfaccia Grafica</string>
     <string name="screenon">Schermo sempre attivo</string>
     <string name="counters">Segnalatori</string>
     
@@ -30,7 +30,7 @@
     <string name="friendly_structures">Strutture alleate</string>
     <string name="enemy_structures">Strutture nemiche</string>
     
-    <string name="updates_speed">Frequenza aggiornamento</string>
+    <string name="updates_speed">Frequenza d'aggiornamento</string>
     <string name="how_ip">"Per sapere come ottenere un indirizzo IP vedi: http://ip.junkcode.net/"</string>
     <string name="how_ip_der">"Se non sai come ottenere il tuo indirizzo IP clicca qui"</string>
     <string name="ip_err">Indirizzo IP non valido</string>
@@ -72,80 +72,80 @@
     
  		<string name="nowificonnected">Devi essere connesso alla rete WiFi locale</string>
     
- 		<string name="planeicons">Airplane icons</string>
+ 		<string name="planeicons">Icone velivoli</string>
         <string-array name="planes_icon_size">
-        <item >Big</item>
-        <item >Medium</item>
-        <item >Small</item>
-        <item >Very small</item>
+        <item >Grandi</item>
+        <item >Medie</item>
+        <item >Piccole</item>
+        <item >Molto piccole</item>
     </string-array>
     
-    <string name="lines">Navigation lines</string>
-    <string name="lines_oos">Only to offscreen</string>
-    <string name="lines_enemy">Enemies</string>
-    <string name="lines_friendly">Friendlies</string>
-    <string name="lines_squad">Squad</string>
-    <string name="lines_target">Target</string>
+    <string name="lines">Linee di navigazione</string>
+    <string name="lines_oos">Solo a bersagli fuori schermo</string>
+    <string name="lines_enemy">Nemici</string>
+    <string name="lines_friendly">Alleati</string>
+    <string name="lines_squad">Squadra</string>
+    <string name="lines_target">Bersaglio</string>
     
-    <string name="hide_gp_login">Hide G+ Login button</string>
+    <string name="hide_gp_login">Nascondi il bottone di G+</string>
     
-    <string name="fullscreen">Fullscreen</string>
-    <string name="connect">Connect to friends</string>
+    <string name="fullscreen">A tutto schermo</string>
+    <string name="connect">Collegati agli amici</string>
     
     <string name="waypoint">Waypoint</string>
-    <string name="waypoint_ctrl">Waypoint controls</string>
-    <string name="add">Add</string>
+    <string name="waypoint_ctrl">Controllo Waypoint</string>
+    <string name="add">Aggiungi</string>
     
-    <string name="horizontal_distance">Show horizontal distance</string>
+    <string name="horizontal_distance">Mostra distanza orizzontale</string>
     
     <string name="pref_header_extras">Extra</string>
     <string name="prediction">Prediction</string>
     <string name="self">Self</string>
-    <string name="show_intro_screen">Show intro splash</string>
+    <string name="show_intro_screen">Mostra Intro</string>
     
-    <string name="ext_unlock">Unlock extras</string>
+    <string name="ext_unlock">Sblocca extra</string>
     <string name="ext_unlock_det">
-        "Extras are unlocked by donation of <b><i>any</i></b> amount or by content contribution\r\n(If you donated earlier and didn\'t get the code yet write us an email)"</string>
-    <string name="ext_unlock_dial">"Unlock Code:"</string>
+        "Gli extra sono sbloccati tramite donazione di una <b><i>qualsiasi somma</i></b> o tramite contributo in contenuti\r\n(se hai donato in precedenza ma non hai ancora ricevuto il codice, scrivici un\'email)"</string>
+    <string name="ext_unlock_dial">"Codice di sblocco:"</string>
     
-    <string name="ext_link">Link to G+ account</string>
+    <string name="ext_link">Collega ad un account G+</string>
         
-    <string name="firing_zone">Firing range</string>
-    <string name="gray_map">Grayscale map</string>
+    <string name="firing_zone">Gittata armi</string>
+    <string name="gray_map">Mappa in scala di grigi</string>
     
-    <string name="map">Map:</string>
-    <string name="custom_maps">Custom maps</string>
-    <string name="custom_maps_url">Custom maps url</string>
-    <string name="see_forum">For details see JunkCode forum</string>
+    <string name="map">Mappa:</string>
+    <string name="custom_maps">Mappe personalizzate</string>
+    <string name="custom_maps_url">Indirizzo mappe personalizzate</string>
+    <string name="see_forum">Per ulteriori dettagli visitare JunkCode forum</string>
     
-    <string name="tankicons">Tank icons</string>
-    <string name="groundicons">Ground icons</string>
+    <string name="tankicons">Icone Carri</string>
+    <string name="groundicons">Icone Battaglie terrestri</string>
     
-    <string name="share_position">Share position</string>
-    <string name="death_markers">Leave skulls on death</string>
+    <string name="share_position">Condividi la posizione</string>
+    <string name="death_markers">Lascia dei segnalatori (teschi) alla morte</string>
 
-    <string name="size">Size</string>
-    <string name="style">Style</string>
+    <string name="size">Dimensione</string>
+    <string name="style">Stile</string>
     
     <string-array name="style_types">
-        <item >Old</item>
-        <item >New</item>
+        <item >Vecchio</item>
+        <item >Nuovo</item>
     </string-array>
     
     <string-array name="color_schemes">
         <item>Default</item>
-        <item>Green/Orange</item>
-        <item>Green/Red</item>
+        <item>Verde/Arancio</item>
+        <item>Verde/Rosso</item>
     </string-array>
-    <string name="colors">Colors</string>
+    <string name="colors">Colori</string>
     
-    <string name="pref_header_map_view">Map setup</string>
+    <string name="pref_header_map_view">Impostazioni Mappa</string>
     <string name="pref_header_GUI">GUI</string>
     
     <string name="help_title">Help &amp; FAQ</string>
     
-    <string name="blink">Allow flashing</string>
-    <string name="offline_mode">Offline mode</string>
+    <string name="blink">Permetti i lampeggianti</string>
+    <string name="offline_mode">Modalita Offline</string>
     <string name="talk_back">Talk back</string>
     <string name="kills">Kills</string>
     <string name="trigger_words_kill">Kill trigger words</string>
@@ -157,40 +157,40 @@
     <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
     <string name="player_name">Ingame name</string>
     <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
-    <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
+    <string name="please_restart">Riavviare l\'applicazione per abilitare i cambiamenti.</string>
+    <string name="planes_in_tank">Rileva velivoli durante la guida dei Carri</string>
+    <string name="bomber_path">Rotta Bombardieri</string>
+    <string name="air_raid_siren">Allarme attacco aereo</string>
     <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
+    <string name="base_approx_time_remaining">Mostra il tempo di cattura approssimativo</string>
+    <string name="base_progress_beeping">Beep a base quasi catturata</string>
     <string name="mapscale">Map scale</string>
-    <string name="breadcrumbs">Breadcrumbs</string>
-    <string name="support_development">Support the development</string>
+    <string name="breadcrumbs">Storico scia</string>
+    <string name="support_development">Supporta lo sviluppo</string>
 
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
-    <string name="connected">Connected</string>
+    <string name="airplane_range">Raggio di rilevamento Velivoli</string>
+    <string name="ground_range">Raggio di rilevamento Carri</string>
+    <string name="connected">Connesso</string>
     <string name="supporter">Supporter</string>
     <string name="contributor">Contributor</string>
-    <string name="contribute_resources">Help out with app resources</string>
-    <string name="waiting_for_battle">Waiting for battle</string>
-    <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Exit the app?</string>
-    <string name="exit_question">Do you want to disconnect and close the app?</string>
-    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-    <string name="coop_start">Start new co-op</string>
-    <string name="coop_join">Join co-op</string>
+    <string name="contribute_resources">Aiutaci con le risorse dell\'app</string>
+    <string name="waiting_for_battle">In attesa della battaglia</string>
+    <string name="subscription">(Sottoscrizione)</string>
+    <string name="exit_title">Uscire dall\'app?</string>
+    <string name="exit_question">Ti vuoi disconnettere ed uscire?</string>
+    <string name="hide_add_requirement">Diventa un collaboratore o un finanziatore per disattivare le pubblicitá.</string>
+    <string name="coop_start">Inizia nuova co-op</string>
+    <string name="coop_join">Unisciti a co-op</string>
     <string name="coop_title">Co-op session</string>
-    <string name="close_enemy_detection">Close enemy detection</string>
-    <string name="far_enemy_detection">Far enemy detection</string>
+    <string name="close_enemy_detection">Rilevamento nemici vicini</string>
+    <string name="far_enemy_detection">Rilevamento nemici lontani</string>
     <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
     <string name="coop_session_started">Co-op session started.</string>
     <string name="id">ID:</string>
     <string name="coop_chat_instruction_prefix">Type</string>
     <string name="coop_chat_instruction_postfix">to game team chat.</string>
     <string name="show_ads_while_not_playing">Show ads while not playing</string>
-    <string name="allow_data_collection">Allow anonymous data collection</string>
-    <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="allow_data_collection">Permetti la raccolta dati d\'utilizzo</string>
+    <string name="data_collection_explained">In accordo con le regole di Google Analytics , per aiutare lo svuluppo ed il miglioramento dell\'app.</string>
 
 </resources>
