--- a/translations/values-tr/strings.xml
+++ b/translations/values-tr/strings.xml
@@ -6,7 +6,7 @@
     <string name="settings">Ayarlar</string>
     <string name="hide">Gizle</string>
     <string name="danger">Tehlike Bildirimi</string>
-    <string name="nodanger">OK notification</string>
+    <string name="nodanger">OK Bildirim</string>
     <string name="proximity_wrn">Etki Alanı:</string>
     
     
@@ -14,8 +14,8 @@
     <string name="connerror">Bağlantı Yok</string>
     
     <string name="gui">GUI Ayarları</string>
-    <string name="screenon">Keep screen on</string>
-    <string name="counters">Counters</string>
+    <string name="screenon">Ekranda Tut</string>
+    <string name="counters">Sayaçlar</string>
     
     <string name="ip_h">IP Adresi</string>
     <string name="find_ip">Tara</string>
@@ -43,21 +43,21 @@
         <item >Yavaş</item>
         <item >Biraz Yavaş</item>
         <item >Çok Yavaş</item>
-        <item >5 sec</item>
+        <item >5 Saniye</item>
     </string-array>
 
      <string name="info_title">Hakkında</string>
     <string name="info_msg">
         "Bu War Thunder hayranları tarafından yapılan resmi olmayan bir uygulama!\r\n"
-        "This app is still in beta but feel free to contact us with bugs or new ideas at:\r\n"
+        "Bu uygulama hala beta sürümünde. Ancak, hata veya yeni fikirlerle bizimle iletişime geçmekten çekinmeyin:\r\n"
         "http://junkcode.net/forum \r\n"
         "\r\n"
-        "We are looking for people to translate this app, if you want to help see http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
+        "Uygulamayı farklı dillere çevirmek için insanlar arıyoruz, yardımcı olmak istiyorsanız http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
     </string>
     <string name="donate_line">
         "Bu uygulamayı Beğendin mi? Bağışla söyle. http://junkcode.net for future development. \r\n"
         </string>
-     <string name="info_update_title">Update news</string>
+     <string name="info_update_title">Güncel Haberler</string>
      
     <string name="version">App Version:</string>
     <string name="ok">OK</string>
@@ -80,9 +80,9 @@
         <item >Çok Küçük</item>
     </string-array>
     
-    <string name="lines">Navigation lines</string>
-    <string name="lines_oos">Only to offscreen targets</string>
-    <string name="lines_enemy">Enemies</string>
+    <string name="lines">Nagivasyon Hatları</string>
+    <string name="lines_oos">Sadece ekran dışındaki hedefler</string>
+    <string name="lines_enemy">Düşmanlar</string>
     <string name="lines_friendly">Friendlies</string>
     <string name="lines_squad">Takım</string>
     <string name="lines_target">Hedef</string>
@@ -116,13 +116,13 @@
     <string name="map">Harita:</string>
     <string name="custom_maps">Özel Haritalar</string>
     <string name="custom_maps_url">Özel Harita URL</string>
-    <string name="see_forum">For details see JunkCode forum</string>
+    <string name="see_forum">Ayrıntılar için bkz. JunkCode forum</string>
     
     <string name="tankicons">Tank İkonları</string>
     <string name="groundicons">Zemin İkonları</string>
     
-    <string name="share_position">Share position</string>
-    <string name="death_markers">Leave skulls on death</string>
+    <string name="share_position">Konum Paylaşımı</string>
+    <string name="death_markers">Ölünce kafatası bırak</string>
 
     <string name="size">Boyut</string>
     <string name="style">Sitil</string>
@@ -148,11 +148,11 @@
     <string name="offline_mode">Çevrimdışı Mod</string>
     <string name="talk_back">Talk back</string>
     <string name="kills">Öldürmeler</string>
-    <string name="trigger_words_kill">Kill trigger words</string>
+    <string name="trigger_words_kill">Öldürünce kullanılan kelimeler</string>
     <string name="trigger_words_kill_default">yok edildi,vuruldu,уничтожен</string>
     <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
     <string name="burns">Burns</string>
-    <string name="trigger_words_burn">Burn trigger words</string>
+    <string name="trigger_words_burn">Yanınca kullanılan kelimeler</string>
     <string name="trigger_words_burn_default">set afire,подожжён</string>
     <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
     <string name="player_name">Ingame name</string>
@@ -162,29 +162,29 @@
     <string name="bomber_path">Bombalama Yolları</string>
     <string name="air_raid_siren">Hava Saldırısı Sireni</string>
     <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
+    <string name="base_approx_time_remaining">Üsttü ele geçirmede tahmini süreyi gösterir</string>
+    <string name="base_progress_beeping">Üst ele geçirmede, bip sesi</string>
     <string name="mapscale">Map scale</string>
     <string name="breadcrumbs">Breadcrumbs</string>
     <string name="support_development">Support the development</string>
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
+    <string name="airplane_range">Uçak Algılama Menzili</string>
+    <string name="ground_range">Yer Belirleme Menzili</string>
     <string name="connected">Bağlandı</string>
     <string name="supporter">Destekleyen</string>
     <string name="contributor">Katılımcı</string>
-    <string name="contribute_resources">Help out with app resources</string>
+    <string name="contribute_resources">Uygulama kaynakları ile yardım edin</string>
     <string name="waiting_for_battle">Waiting for battle</string>
     <string name="subscription">(Abonelik)</string>
     <string name="exit_title">Uygulamadan çıkılsın mı?</string>
     <string name="exit_question">Uygulamanın bağlantısını kesmek ve kapatmak istiyor musunuz?</string>
     <string name="hide_add_requirement">Reklamları kapatmak için Destekleyen veya Katılımcı Olun.</string>
-    <string name="coop_start">Start new co-op</string>
-    <string name="coop_join">Join co-op</string>
-    <string name="coop_title">Co-op session</string>
+    <string name="coop_start">Yeni Co-op Başlat</string>
+    <string name="coop_join">Co-op katılın</string>
+    <string name="coop_title">Co-op oturumu</string>
     <string name="close_enemy_detection">Düşman Tespitini Kapat</string>
     <string name="far_enemy_detection">Uzaktaki Düşman Tespiti</string>
-    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-    <string name="coop_session_started">Co-op session started.</string>
+    <string name="coop_connecting_to_id">Co-op ID'ye bağlanma:</string>
+    <string name="coop_session_started">Co-op oturumu başladı.</string>
     <string name="id">ID:</string>
     <string name="coop_chat_instruction_prefix">Tür</string>
     <string name="coop_chat_instruction_postfix">to game team chat.</string>
